# pdfly

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NOTICE  PLAN.md  README.md  TASKS.md
scripts/: fetch-references.sh
src/: cli.rs  lib.rs  main.rs  model.rs  ocr.rs  pipeline.rs
src/analyze/: lines.rs  mod.rs  reading_order.rs  sanitize.rs  structured.rs  tables.rs
src/extract/: fonts.rs  lopdf_backend.rs  matrix.rs  mod.rs
src/render/: annotate.rs  html.rs  images.rs  json.rs  md.rs  mod.rs  split.rs  tagged.rs  text.rs
tests/: extract.rs  render.rs  snapshot.rs
tests/snapshots/: snapshot__lorem_md.snap
