[package]
name = "pdf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
lopdf = "0.40.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ttf-parser = "0.25.1"

[dev-dependencies]
insta = "1.47.2"
