[package]
name = "pdf-rs"
version = "0.1.0"
edition = "2024"
description = "Convert PDFs to clean Markdown (and JSON/HTML/text), with chapter splitting, image extraction, and tagged-PDF output. Pure Rust, no native deps."
authors = ["Soham Zemse <soham@zemse.in>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zemse/pdf-rs"
homepage = "https://github.com/zemse/pdf-rs"
keywords = ["pdf", "markdown", "extraction", "cli", "rag"]
categories = ["command-line-utilities", "text-processing"]
# Whitelist what ships (never blacklist).
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/ARCHITECTURE.md",
    "/PLAN.md",
    "/NOTICE",
    "/LICENSE",
]

[[bin]]
name = "pdf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
lopdf = "0.40.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ttf-parser = "0.25.1"

# Optional OCR backend (pure Rust, no native deps). Enable with `--features ocr`.
ocrs = { version = "0.10", optional = true }
rten = { version = "0.21", optional = true }

[features]
default = []
ocr = ["dep:ocrs", "dep:rten"]

[dev-dependencies]
insta = "1.47.2"
